// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should render 404 1`] = `
<div>
  <div
    class="MuiBox-root css-19703gc"
  >
    <h1
      class="MuiTypography-root MuiTypography-h1 css-2c7tpz-MuiTypography-root"
    >
      404
    </h1>
    <p
      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Not Found
    </p>
    <a
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-15o2k4f-MuiButtonBase-root-MuiButton-root"
      href="/"
      tabindex="0"
    >
      goHome
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`ErrorPage should render 500 1`] = `
<div>
  <div
    class="MuiBox-root css-19703gc"
  >
    <h1
      class="MuiTypography-root MuiTypography-h1 css-2c7tpz-MuiTypography-root"
    >
      Oops
    </h1>
    <a
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-15o2k4f-MuiButtonBase-root-MuiButton-root"
      href="/"
      tabindex="0"
    >
      goHome
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
